--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <html lang="pt-br">
 <head>
    
-    <link rel="stylesheet" href="/styles/cowStyle.css">
+    <link rel="stylesheet" href="styles/cowStyle.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/svg" href="/img/cowSlayer.svg">
