--- a/index.html
+++ b/index.html
@@ -632,6 +632,6 @@
  </section>
 <!-- final -->
 </div>
-<script src="/scripts/cowSlayer.js"></script>
+<script src="scripts/cowSlayer.js"></script>
 </body>
 </html>
