--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/svg" href="/img/cowSlayer.svg">
     
-    <title>Jogo da Vaca</title>
+    <title>Cow Slayer</title>
  
 </head>
 <body>
